"update new tex run"

--- a/true_notes.tex
+++ b/true_notes.tex
@@ -116,6 +116,9 @@
 
 \baselineskip 16pt
 
+\tableofcontents
+\newpage
+
 \underline{Some Quantum Mechanics Texts}
 
 \begin{description}
@@ -144,8 +147,6 @@ level.
 \newpage
 
 \underline{Index to 215A Notes}
-
-\tableofcontents
 
 \begin{description}
 \item[I.] \underline{Introduction and Review}
