"reset the typing to allow for math theorems"

--- a/true_0.tex
+++ b/true_0.tex
@@ -1,5 +1,6 @@
 \section{215A - Introduction and Review}
 
+\subsection{$\Psi(\vec{r},t)$  and $\Phi(\vec{p},t)$ }
 I will assume that you all have had at least one quarter or one semester of undergraduate quantum mechanics.
 This means that you have been introduced to the wave function $\Psi(\vec r,t)$ and the Schroedinger wave equations, 
 $H\Psi = i\hbar {\partial \Psi\over \partial t}$,which tells us how $\Psi$ develops in time. You should have solved the wave
