--- a/true_notes.tex
+++ b/true_notes.tex
@@ -47,7 +47,7 @@
     pdfkeywords={keyword1, key2, key3}, % list of keywords
     pdfnewwindow=true,      % links in new PDF window
     colorlinks=true,               % false: boxed links; true: colored links
-    linkcolor=black,                  % color of internal links (change box color with linkbordercolor)
+    linkcolor=blue,                  % color of internal links (change box color with linkbordercolor)
     citecolor=green,             % color of links to bibliography
     filecolor=magenta,         % color of file links
     urlcolor=cyan                % color of external links
@@ -178,13 +178,18 @@
 %\hsize=6.0 true in
 %\vsize=8.40 true in
 %\pagestyle{plain}
-\parindent = 0.cm
+
+\baselineskip=14pt
+%\parindent = 0.cm
+%\parindent = 15pt
+\setlength{\parindent}{24pt}
+\setlength{\parskip}{\baselineskip}
+%\noindent
+
 %\vglue 0.3cm
 %\rightskip=3pc
 %\leftskip=3pc
 \twelverm
-\baselineskip=14pt
-\noindent
 
 \baselineskip 16pt
 
